<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail"
    android:background="#EADFB4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvSlmtDtg"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selamat Datang : "
            android:textSize="20sp"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:id="@+id/tvTipeMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipe Membership"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_transaksi"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvKodeBrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kode Barang : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvNamaBrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Barang : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvHargaBrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Harga Barang : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvTotHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Harga : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvDiskHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Diskon Harga : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvDiskMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Diskon Membership : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvJlhBayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jumlah Bayar : "
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_makasih"
                android:layout_marginTop="80dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/btShare"
            android:layout_width="199dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/string_share"
            android:textSize="25sp">

        </Button>

    </LinearLayout>

</LinearLayout>